<resources>
    <string name="app_name">Medical</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="adhar_no">Adhar No</string>
    <string name="contact_no">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="please_enter">Please Enter </string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="capture_image">Capture Image</string>
</resources>
