<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medical.activity.FormOne">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/first_name"
            android:text="@string/first_name"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 <EditText
            android:id="@+id/middle_name"
            android:text="@string/middle_name"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 <EditText
            android:id="@+id/last_name"
            android:text="@string/last_name"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 <EditText
            android:id="@+id/age"
            android:text="@string/age"
             android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 <EditText
     android:id="@+id/adhar_card"
            android:text="@string/adhar_no"
             android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
            android:text="Gender"
            android:layout_marginLeft="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

<RadioGroup
    android:id="@+id/gender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:text="Male"
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioButton
        android:text="Female"
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RadioGroup>
        </LinearLayout>
 <EditText
     android:id="@+id/contact_number"
     android:text="@string/contact_no"
     android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
 <EditText
     android:id="@+id/city"
     android:text="@string/city"

     android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height= "wrap_content" />
 <EditText
     android:id="@+id/address"
     android:text="@string/address"
     android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
<Spinner
    android:id="@+id/nameOfDoctor"
    android:layout_marginTop="@dimen/margin_five"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></Spinner>
        <Button
            android:text="@string/capture_image"
            android:id="@+id/capture_image"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
